--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0%;
     padding: 0%;
     background-image: linear-gradient(180deg, rgb(32, 32, 32), rgb(49, 49, 47));
+    width: 100%;
+    height: 750px;
+
 
 }
 
@@ -113,7 +116,7 @@ body {
         margin: 0%;
         padding: 0%;
         width: 100%;
-        height: 1000px;
+        height: 750px;
         
     }
     
